# actix-graphql

./: .dockerignore  Cargo.toml  README.md  docker-compose.yml
src/: db.rs  handlers.rs  main.rs
src/schemas/: root.rs  user.rs
