[package]
name = "actix-graphql"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "^4.2.1"
actix-web-lab = "^0.18.8"
actix-cors = "^0.6.4"

juniper = "^0.15.10"

mongodb = "^2.3.1"
bson = { version = "^2.4.0", features = ["chrono-0_4"] }
chrono = "0.4"
futures = "^0.3.25"

dotenv = "^0.15.0"
env_logger = "^0.10.0"
log = "^0.4.17"
serde = { version = "^1.0.151", features = ["derive"] }
serde_json = "^1.0.91"
uuid = { version = "^1.2.2", features = ["v4", "serde"] }
